优化DAG拓扑排序代码